@@ -1180,6 +1180,9 @@ enum TrinityStrings
     LANG_SYSTEMMESSAGE_GUARD            = 11668,
     LANG_SYSTEMMESSAGE_DEVELOPER        = 11669,
 
+    // Fake players
+    LANG_FAKE_DND                       = 12003,
+
     LANG_REM_TRANSMOGRIFICATIONS_ITEMS  = 11100,
     LANG_ERR_NO_TRANSMOGRIFICATIONS     = 11101,
     LANG_REM_TRANSMOGRIFICATION_ITEM    = 11102,
